--- a/Agilefreaks/Views/Shared/_Layout.cshtml
+++ b/Agilefreaks/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link href='~/Content/apple-touch-icon.png' rel='apple-touch-icon'>
-    <link rel="shortcut icon" href="~/Content/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="~/Content/favicon.ico" type="image/x-icon"/>
     <!--[if lt IE 9]>
         <link rel="stylesheet" href="~/Content/ie8.css">
     <![endif]-->
@@ -27,19 +27,45 @@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <script type="application/ld+json">
+        {
+            "@@context" : "http://schema.org",
+            "@@type" : "LocalBusiness",
+            "name" : "AgileFreaks",
+            "image" : "http://agilefreaks.com/Content/img/logo.png",
+            "telephone" : [ "+40 745 857479", "+40 747 074372" ],
+            "email" : "office@agilefreaks.com",
+            "address" : {
+                "@@type" : "PostalAddress",
+                "streetAddress" : "Str. Avram Iancu, nr. 1-3 ap 5",
+                "addressLocality" : "Sibiu",
+                "addressCountry" : "Romania",
+                "postalCode" : "550183"
+            },
+                "review" : {
+                    "@@type" : "Review",
+                    "author" : {
+                        "@@type" : "Person",
+                        "name" : "Stephen C Sheppard, Founder Social Artisan Limited"
+                    },
+                    "reviewBody" : "Alex and his team are simply excellent. Hard working, diligent, and extremely knowledgeable.\n                Agile Freaks went above and beyond to deliver on time and to budget on a very complicated project.\n                I wouldn&#39;t hesitate to work with him again."
+                }
+        }
+    </script>
 </head>
 <body>
-    <!--[if lt IE 7]>
-        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-    <![endif]-->
-    @RenderBody()
+<!--[if lt IE 7]>
+    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+<![endif]-->
+@RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/main")
-    <script src="~/Scripts/humane/humane.min.js"></script>
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryui")
+@Scripts.Render("~/bundles/main")
+<script src="~/Scripts/humane/humane.min.js"></script>
 
-    @Scripts.Render("~/bundles/jqueryval")
-    @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/jqueryval")
+@RenderSection("scripts", required: false)
 </body>
 </html>
