--- a/Agilefreaks/Views/Home/_Contact.cshtml
+++ b/Agilefreaks/Views/Home/_Contact.cshtml
@@ -9,29 +9,8 @@
             <div class="contact-black-line"></div>
             <div class="contact-white-line"></div>
             <div class="contact-black-line"></div>
-            <span class="contact-tagline">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</span>
+            <span class="contact-tagline">01001100 01101111 01110010 01100101 01101101 00100000 01101001 01110000 01110011 01110101 01101101 00100000 01100100 01101111 01101100 01101111 01110010 00100000 01110011 01101001 01110100 00100000 01100001 01101101 01100101 01110100</span>
             <div class="clearfix contact-form-wrap">
-
-                @using (Html.BeginForm("SendEmail", "ContactUs", FormMethod.Post, new { @class = "contact-form" }))
-                {
-                    @Html.ValidationSummary()
-                    <input id="notification" type="hidden" value="@TempData["Notification"]"/>
-                    <fieldset>
-                        <div class="input-wrap">
-                            <span class="name-icn"></span>
-                            @Html.TextBoxFor(model => model.Name, new { placeholder = "Name" })
-                        </div>
-                        <div class="input-wrap input-email">
-                            <span class="email-icn"></span>
-                            @Html.TextBoxFor(model => model.Email, new { placeholder = "Email address" })
-                        </div>
-                        @Html.TextAreaFor(model => model.Message, new { placeholder = "Type your message..." })
-                        <div class="input-wrap input-submit">
-                            <button type="submit" class="get-in-touch">Send </button>
-                        </div>
-                    </fieldset>
-                }
-
                 <div class="contact-details">
                     <h4>Contact details</h4>
                     <div class="line-contact-details"></div>
@@ -51,6 +30,6 @@
                 </div>
             </div>
         </div>
-        <div class="container-footer"><span>Copyright © 2009-2015 Agile Freaks.</span></div>
+        <div class="container-footer"><span>Copyright © 2009-2018 Agile Freaks.</span></div>
     </div>
 </section>
